# HIPTraining

./: .gitignore
001_introduction/: helloworld.cpp  helloworld2  helloworld2.cpp
002_memory_device_management/: Makefile  ex1  ex1.cpp  ex1Soln.cpp  ex2  ex2.cpp  ex3  ex3.cpp  ex4  ex4.cpp  ex4soln.cpp
003_simple_kernels/: CMakeLists.txt  README.md  ex1_errors.cpp  ex2_vadd.cpp  ex4_matadd.cpp
004_cooperation_between_threads/: README.md  mfs  movingFilterSoln.cpp  moving_filter.cpp  niSoln
004_cooperation_between_threads/hpe6u-9.amd.com/: 3670120_results.pftrace
004_cooperation_between_threads/lecture_examples/: histo  histo.cpp  reversal.cpp
005_asynchronous_operations/: Makefile  car.cpp  car.hpp  common.hpp  ex1  ex1.cpp  ex2.cpp
005_asynchronous_operations/hpe6u-9.amd.com/: 3562429_results.pftrace  3564620_results.pftrace  3565477_results.pftrace
006_fp_arithmetic/: README.md
007_hipgraph/: README.md  kernels.h
007_hipgraph/slides_demo/: example_from_slides.cpp
007_hiprtc/: README.md  transpose_main.cpp
008_debugging/: MatAddFinal.cpp  MatAdd_1_GPUSegFault.cpp  MatAdd_2_CPUAssert.cpp  MatAdd_3_ArraySize.cpp  MatAdd_4_BigData.cpp
008_hipgraph/: CMakeLists.txt  exercise1.cpp  exercise2.cpp
008_hipgraph/slides_demo/: plotting.py
009_profiling/: Makefile  README.md
012_cross_lane_exercise/: cross_lane_example.cpp  readme.md
015_latency_and_occupancy/: README.md  ex3_vadd.cpp
Memory_Optimizations/: Makefile  Transpose.cpp
asynchronous_operations/: car.cpp  common.hpp  ex1.cpp  kernels.hpp
cooperation_between_threads/: CMakeLists.txt  Makefile  README.md  moving_filter.cpp  numerical_integration.cpp  plot.py
cross_lane_exercise/: cross_lane_example.cpp  readme.md
cross_lane_exercise/solutions/: cross_lane_example.cpp
fp_arithmetic/: ex1_single_thread_template.cpp  ex2_multithread_template.cpp
fp_arithmetic/solutions/: ex1_single_thread.cpp  ex2_multithread.cpp
fp_arithmetic/solutions/scripts/: fp_exercise1.py  fp_exercise2.py
hiprtc/: CMakeLists.txt  transpose_kernel.h  transpose_main.cpp
latency_and_occupancy/: CMakeLists.txt  README  ex1_latency.cpp  ex2_occupancy.cpp  ex3_vadd.cpp
memory_device_management/: README.md  ex1.cpp  ex2.cpp  ex3.cpp
mfma_exercise/: 03_simple_hgemm_16x16.cpp  common.hpp  readme.md  simple_hgemm.cpp  simple_sgemm.cpp
mfma_exercise/solutions/: 02_simple_hgemm_32x32.cpp  03_simple_sgemm_16x16.cpp  04_simple_hgemm_16x16.cpp
reduction_optimizations/: reduce_1.cpp  reduce_2.cpp  reduce_3.cpp  reduce_4.cpp  reduce_5.cpp
simple_kernels/: CMakeLists.txt  Makefile  README  ex0_errors.cpp  ex1_errors.cpp  ex1_vadd.cpp  ex2_vadd.cpp  ex2_vaddblock.cpp  ex3_vadd4by.cpp  ex3_vaddblock.cpp  ex4_vadd4by.cpp  ex4_vaddgrid.cpp  ex5_matadd.cpp  ex5_vaddgrid.cpp  ex6_matadd.cpp
